style.css
/* ... */
.site-header,
.entry-header,
.entry-content,
.widget-area .widget,
.comment {
	-webkit-hyphens: auto;
	-moz-hyphens: auto;
	hyphens: auto;
	word-wrap: break-word;
}

.widget_search input[type="text"] { /* fixes overflow issue */
	width: 90%;
}

.site-footer {
	clear: both;
	margin-top: 100px;
	margin-bottom: 40px;
	color: #999;
}

.site-footer,
.site-footer a {
	font-size: 13px;
	text-align: center;
}

.site-footer a:hover {
	color: #57ad68;
}

img#wpstats {
	display: block;
	margin: 5px auto;
}

table td {
	padding: 4px 0;
	border-bottom: solid 1px #eee;
	font-weight: 300;
}

table th {
	padding: 4px 0;
	border-bottom: solid 1px #ccc;
}

/* Post Author Bottom Card */

.post-author-bottom {
	padding-top: 50px;
	padding-bottom: 50px;
	margin-bottom: 40px;
	position: relative;
	border-top: 1px solid #ddd;
	border-bottom: 1px solid #ddd;
	display: none;
}

.post-author-bottom .site-logo img {
	float: left;
	width: 70px;
	height: auto;
}
.post-author-bottom .site-title,
.post-author-bottom .site-description {
	clear: none;
}
.post-author-bottom .post-author-info {
	margin-left: 100px;
	margin-right: 200px;
	padding-right:  25px;
	padding-top: 10px;
}
.post-author-bottom h1.site-title,
.post-author-bottom h2.site-description {
	margin-left: 0;
}
.post-author-bottom .post-published-date {
	width: 177px;
	padding-left: 385px;
	position: absolute;
	margin-top: -85px;
	top: 135px;
	right: 0;
}

/* Hide left-side author card under 1200px */
@media only screen and (max-width : 1200px) {
	.site-header {
		display: none;
	}
	.post-author-bottom {
		display: block;
	}
	.entry-meta {
		border-bottom: none;
	}
	.entry-title-meta-author {
		display: inline-block;
	}
	.widget-area {
		float: right;
		width: 100%;
		margin-left: 0;
		text-align: inherit;
		padding-top: 40px;
	}
   .single .entry-meta {
	   border-top: none;
   }
}
/* iPads (landscape) ----------- */
@media only screen and (max-width : 900px) {
/* Styles */

	.site {
		position: relative;
		margin: 0 auto;
		padding: 70px;
		width: auto;
	}

	.site-header,
	.site-content,
	.site-footer,
	.widget-area {
		width: 100%;
	}

	.site-title,
	.site-description {
		clear: none;
		margin-left: 70px;
	}
	.site-title {
		font-style: normal;
	}

	.site-logo,
	.site-logo img {
		float: left;
		width: 50px;
		height: auto;
	}

	.main-navigation {
		clear: none;
		margin-left: -10px;
		padding-top: 20px;
		width: auto;
	}

	.main-navigation li {
		display: inline-block;
		padding: 5px 10px;
		width: auto;
	}

	/* Small Navigation */
	.main-small-navigation {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		border-bottom: solid 1px #DDD;
		background: #F2F7F9;
		margin-top: 0;
	}

	.main-small-navigation ul {
		margin: 0;
		padding: 0;
		list-style: none;
	}

	.main-small-navigation a {
		display: block;
		padding: 10px 40px;
		border-top: solid 1px #ddd;
	}

	.main-small-navigation .menu-toggle {
		margin: 0;
		padding: 10px 40px;
		font-size: 14px;
	}

	.main-small-navigation .menu-toggle:before {
		margin-right: 10px;
		margin-left: -20px;
		content: '\2261';
	}

	.main-small-navigation .menu-toggle.toggled-on {
		background: white;
	}
}

@media only screen and (max-width : 500px) {
	#masthead {
		margin-top: 40px;
	}

	#page {
		padding-left: 16px;
		padding-right: 16px;
	}

	.entry-content,
	#comments {
		font-size: 18px;
		line-height: 1.4;
		width: 100%;
	}

	h1.entry-title {
		font-size: 32px;
	}

	.format-aside .entry-content {
		font-size: 25px;
		line-height: 36px;
	}
	.post-author-bottom {
		margin-left: 10px;
	}
   .post-author-bottom .site-logo, .post-author-bottom .site-logo img {
	   float: none;
   }
	.post-author-bottom .post-author-info {
		margin-left: 0;
		margin-right: 0;
	}
	.post-author-bottom .post-published-date {
		padding-left: 0;
		position: inherit;
		margin-top: 0;
		top: inherit;
	}
   .entry-header {
	   word-wrap: none;
	   hyphens: none;
	   -webkit-hyphens: none;
	   -moz-hyphens: none;
   }
   .commentlist ul.children {
	   margin-left: 0;
	   padding-left: 10px;
   }
	.commentlist .thread-even,
	.commentlist .thread-odd {
		padding-left: 10px;
	}

}

/* Related Posts (Efficient Related Posts plugin) */

ul.related_post {
	list-style: none;
	margin-left: 0;
	font-size: 16px;
	color: #666665;
}
.related_post a {
	text-decoration: none;
	color: black;
	font-weight: 700;
	line-height: 1;
}
.related_post a:hover {
	text-decoration: none;
}
.related_post li {
	margin-bottom: 20px;
}
.related_post li p {
	display: inline;
	font-weight: normal;
	color: #666665;
	font-size: 90%;
}
.related_post_title {
	color: #b3b3b1;
	text-transform: uppercase;
	font-weight: 100;
	font-size: 18px;
	letter-spacing: 1px;
	border-top: 1px solid #eee;
	max-width: 165px;
	padding-top: 20px;
}

/* Footnotes */

.footnotes p {
	margin-bottom: 0;
}
.footnotes {
	font-size: 80%;
}
.blog div.footnotes,
.archive div.footnotes,
.search div.footnotes
{
	display: none;
}

/* Social Buttons */
.social-buttons a i, .social-buttons a i:hover {
	font-size: 1.6em;
	text-decoration: none;
	margin-left: 10px;
	color: #BBC7CC;
}
.social-buttons a i:hover {
	color: #4a4a4a;
	transition: color ease 0.3s;
}
.social-buttons {
	float: right;
	margin-top: 10px;
}

